[gd_scene load_steps=7 format=3 uid="uid://rocket_league_menu"]

[ext_resource type="Script" path="res://scripts/ui/menu/rocket_menu.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://card_button_scene" path="res://menu_card_button.tscn" id="2"]
[ext_resource type="Shader" path="res://scripts/shaders/plasma_glow.gdshader" id="3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_logo"]
shader = ExtResource("3")
shader_parameter/base_color = Color(0.2, 0.5, 1, 1)
shader_parameter/glow_color = Color(0.4, 0.8, 1, 1)
shader_parameter/glow_intensity = 3.0
shader_parameter/animation_speed = 1.5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xp_bg"]
bg_color = Color(0.1, 0.1, 0.15, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xp_fill"]
bg_color = Color(0.3, 0.7, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="RocketLeagueMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="LogoContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="Logo" type="ColorRect" parent="LogoContainer"]
material = SubResource("ShaderMaterial_logo")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 1)

[node name="LogoLabel" type="Label" parent="LogoContainer/Logo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 48
text = "MARBLE
LEAGUE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PlayButton" parent="CenterContainer/VBoxContainer" instance=ExtResource("2")]
layout_mode = 2
button_text = "PLAY"
is_large = true
button_action = "play"

[node name="MultiplayerButton" parent="CenterContainer/VBoxContainer" instance=ExtResource("2")]
layout_mode = 2
button_text = "MULTIPLAYER"
button_action = "multiplayer"

[node name="GarageButton" parent="CenterContainer/VBoxContainer" instance=ExtResource("2")]
layout_mode = 2
button_text = "GARAGE"
button_action = "garage"

[node name="ProfileButton" parent="CenterContainer/VBoxContainer" instance=ExtResource("2")]
layout_mode = 2
button_text = "PROFILE"
button_action = "profile"

[node name="StoreButton" parent="CenterContainer/VBoxContainer" instance=ExtResource("2")]
layout_mode = 2
button_text = "ITEM SHOP"
button_action = "store"

[node name="SeasonPassButton" parent="CenterContainer/VBoxContainer" instance=ExtResource("2")]
layout_mode = 2
button_text = "SEASON PASS"
button_action = "season_pass"

[node name="SettingsButton" parent="CenterContainer/VBoxContainer" instance=ExtResource("2")]
layout_mode = 2
button_text = "SETTINGS"
button_action = "settings"

[node name="QuitButton" parent="CenterContainer/VBoxContainer" instance=ExtResource("2")]
layout_mode = 2
button_text = "QUIT"
button_action = "quit"

[node name="BottomBar" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="BottomBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="BottomBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="XPLabel" type="Label" parent="BottomBar/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 18
text = "Level 25  â€¢  450 / 1000 XP"
horizontal_alignment = 1

[node name="XPBar" type="ProgressBar" parent="BottomBar/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_xp_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_xp_fill")
max_value = 100.0
value = 45.0
show_percentage = false

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
volume_db = -5.0
